--- a/UI/index.html
+++ b/UI/index.html
@@ -32,7 +32,11 @@
       </div>
       <div class="d-flex flex-row-reverse">
         <div>
-          <img src="Starbucks-Logo.png" alt="starbucks logo" width="100" />
+          <img
+            src="/Image/UI/Starbucks-Logo.png"
+            alt="starbucks logo"
+            width="100"
+          />
         </div>
       </div>
     </div>
