Added Qty to Item Availability containers

--- a/UI/index.html
+++ b/UI/index.html
@@ -96,7 +96,7 @@
           <div class="row align-items-start">
             <div class="col border fw-bold">Food</div>
             <div class="col border fw-bold">SKU</div>
-            <div class="col border fw-bold">Name</div>
+            <div class="col border fw-bold">Qty</div>
           </div>
         </div>
       </div>
