Created list-group for food items

--- a/UI/index.html
+++ b/UI/index.html
@@ -93,11 +93,11 @@
         aria-labelledby="nav-item-availability-tab"
       >
         <div class="container">
-          <div class="row align-items-start">
-            <div class="col border fw-bold">Food</div>
-            <div class="col border fw-bold">SKU</div>
-            <div class="col border fw-bold">Qty</div>
-          </div>
+          <ul class="list-group list-group-horizontal">
+            <li class="list-group-item flex-fill">Food</li>
+            <li class="list-group-item flex-fill">SKU</li>
+            <li class="list-group-item flex-fill">Qty</li>
+          </ul>
         </div>
       </div>
       <!-- IMS -->
