adding styling to item availability tab

--- a/UI/index.html
+++ b/UI/index.html
@@ -84,7 +84,7 @@
       </div>
     </nav>
     <!-- Tab Content -->
-    <div class="tab-content pt-4" id="nav-tabContent">
+    <div class="tab-content pt-5" id="nav-tabContent">
       <!-- Item Availability -->
       <div
         class="tab-pane fade show active"
@@ -93,11 +93,16 @@
         aria-labelledby="nav-item-availability-tab"
       >
         <div class="container">
-          <ul class="list-group list-group-horizontal">
-            <li class="list-group-item flex-fill">Food</li>
-            <li class="list-group-item flex-fill">SKU</li>
-            <li class="list-group-item flex-fill">Qty</li>
-          </ul>
+          <div class="row">
+            <div class="col-8 fw-bold border p-2">Food</div>
+            <div class="col fw-bold border p-2">SKU</div>
+            <div class="col fw-bold border p-2">Qty</div>
+          </div>
+          <div class="row">
+            <div class="col-8 border p-2">Bacon, Gouda, and Egg</div>
+            <div class="col border p-2">584739</div>
+            <div class="col border p-2">45</div>
+          </div>
         </div>
       </div>
       <!-- IMS -->
