created JS file

--- a/UI/index.html
+++ b/UI/index.html
@@ -15,8 +15,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <!-- CSS & JS -->
-    <link ref="stylesheet" href="style.css" />
+    <!-- JavaScript -->
     <script src="app.js" async></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -24,6 +23,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
+
   <body>
     <!-- Header -->
     <div class="d-flex p-3 mb-2 bg-success text-white" id="header">
@@ -83,6 +83,7 @@
         </button>
       </div>
     </nav>
+
     <!-- Tab Content -->
     <div class="tab-content pt-5" id="nav-tabContent">
       <!-- Item Availability -->
