--- a/UI/index.html
+++ b/UI/index.html
@@ -28,7 +28,7 @@
     <!-- Header -->
     <div class="d-flex p-3 mb-2 bg-success text-white" id="header">
       <div class="me-auto">
-        <div><h1 class="pt-1">Inventory Management</h1></div>
+        <div><h1 class="pt-1 ms-4">Inventory Management</h1></div>
       </div>
       <div class="d-flex flex-row-reverse">
         <div>
@@ -54,6 +54,7 @@
           role="tab"
           aria-controls="nav-item-availability"
           aria-selected="true"
+          style="color: #008000"
         >
           Item Availability
         </button>
