Added styling to the tabs

--- a/UI/index.html
+++ b/UI/index.html
@@ -46,7 +46,7 @@
       <!-- Tabs -->
       <div class="nav nav-tabs pt-3" id="nav-tab" role="tablist">
         <button
-          class="nav-link active"
+          class="nav-link active link-success"
           id="nav-item-availability-tab"
           data-bs-toggle="tab"
           data-bs-target="#nav-item-availability"
@@ -54,12 +54,11 @@
           role="tab"
           aria-controls="nav-item-availability"
           aria-selected="true"
-          style="color: #008000"
         >
           Item Availability
         </button>
         <button
-          class="nav-link"
+          class="nav-link link-success"
           id="nav-ims-tab"
           data-bs-toggle="tab"
           data-bs-target="#nav-ims"
@@ -71,7 +70,7 @@
           IMS
         </button>
         <button
-          class="nav-link"
+          class="nav-link link-success"
           id="nav-merch-lookup-tab"
           data-bs-toggle="tab"
           data-bs-target="#nav-merch-lookup"
