--- a/UI/index.html
+++ b/UI/index.html
@@ -136,15 +136,19 @@
         role="tabpanel"
         aria-labelledby="nav-merch-lookup-tab"
       >
-        <form class="d-flex p-3">
-          <input
-            class="form-control me-2"
-            type="search"
-            placeholder="Enter SKU"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        <div class="container">
+          <form class="d-flex p-2">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Enter SKU"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
+        </div>
       </div>
     </div>
   </body>
