fixed syntax typo

--- a/SPC/UI/index.html
+++ b/SPC/UI/index.html
@@ -165,6 +165,7 @@
             <div class="col-2 border p-2">12</div>
           </div>
         </div>
+      </div>
 
       <!-- Merch Lookup -->
       <div
