--- a/SPC/UI/index.html
+++ b/SPC/UI/index.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <!-- Header -->
+    <!------------ HEADER ------------>
     <div class="d-flex p-4 mb-2 bg-success text-white" id="header">
       <div class="me-auto">
         <!-- Title -->
@@ -39,7 +39,6 @@
             alt="logo"
             height="70"
             width="120"
-            \
           />
         </div>
       </div>
