Added note about dimensions and viewing

--- a/UI-mockup/index.html
+++ b/UI-mockup/index.html
@@ -24,6 +24,10 @@
     ></script>
   </head>
 
+  <!-----------                                                             ----------->
+  <!----------- Designed w/ iPad Air dimensions: 820 x 1180, view w/ chrome ----------->
+  <!-----------                                                             ----------->
+
   <body>
     <!------------ HEADER ------------>
     <div class="d-flex p-4 mb-2 bg-success text-white" id="header">
