added IMS mock items

--- a/UI-mockup/index.html
+++ b/UI-mockup/index.html
@@ -405,10 +405,10 @@
                 </div>
               </div>
 
-              <div class="col-3 border p-4 text-center">Vanilla Syrup</div>
-              <div class="col-2 border p-4 text-center">18</div>
-              <div class="col-2 border p-4 text-center">24</div>
-              <div class="col-2 border p-4 text-center">12</div>
+              <div class="col-3 border p-4 text-center">Caramel Syrup</div>
+              <div class="col-2 border p-4 text-center">0</div>
+              <div class="col-2 border p-4 text-center">10</div>
+              <div class="col-2 border p-4 text-center">6</div>
             </div>
 
             <!-- Row Four -->
@@ -424,10 +424,10 @@
                 </div>
               </div>
 
-              <div class="col-3 border p-4 text-center">Vanilla Syrup</div>
-              <div class="col-2 border p-4 text-center">18</div>
-              <div class="col-2 border p-4 text-center">24</div>
+              <div class="col-3 border p-4 text-center">Classic Syrup</div>
+              <div class="col-2 border p-4 text-center">6</div>
               <div class="col-2 border p-4 text-center">12</div>
+              <div class="col-2 border p-4 text-center">6</div>
             </div>
 
             <!-- Row Five -->
@@ -443,10 +443,12 @@
                 </div>
               </div>
 
-              <div class="col-3 border p-4 text-center">Vanilla Syrup</div>
+              <div class="col-3 border p-4 text-center">
+                Strawberry Acai Base
+              </div>
               <div class="col-2 border p-4 text-center">18</div>
-              <div class="col-2 border p-4 text-center">24</div>
-              <div class="col-2 border p-4 text-center">12</div>
+              <div class="col-2 border p-4 text-center">36</div>
+              <div class="col-2 border p-4 text-center">18</div>
             </div>
 
             <!-- Row Six -->
@@ -462,10 +464,10 @@
                 </div>
               </div>
 
-              <div class="col-3 border p-4 text-center">Vanilla Syrup</div>
-              <div class="col-2 border p-4 text-center">18</div>
-              <div class="col-2 border p-4 text-center">24</div>
+              <div class="col-3 border p-4 text-center">Lemonade</div>
               <div class="col-2 border p-4 text-center">12</div>
+              <div class="col-2 border p-4 text-center">10</div>
+              <div class="col-2 border p-4 text-center">0</div>
             </div>
 
             <!-- Row Seven -->
@@ -481,10 +483,10 @@
                 </div>
               </div>
 
-              <div class="col-3 border p-4 text-center">Vanilla Syrup</div>
-              <div class="col-2 border p-4 text-center">18</div>
-              <div class="col-2 border p-4 text-center">24</div>
-              <div class="col-2 border p-4 text-center">12</div>
+              <div class="col-3 border p-4 text-center">Mocha Powder</div>
+              <div class="col-2 border p-4 text-center">0</div>
+              <div class="col-2 border p-4 text-center">6</div>
+              <div class="col-2 border p-4 text-center">6</div>
             </div>
 
             <!-- Row Eight -->
@@ -500,10 +502,10 @@
                 </div>
               </div>
 
-              <div class="col-3 border p-4 text-center">Vanilla Syrup</div>
-              <div class="col-2 border p-4 text-center">18</div>
-              <div class="col-2 border p-4 text-center">24</div>
-              <div class="col-2 border p-4 text-center">12</div>
+              <div class="col-3 border p-4 text-center">12oz Stawless Lids</div>
+              <div class="col-2 border p-4 text-center">0</div>
+              <div class="col-2 border p-4 text-center">8</div>
+              <div class="col-2 border p-4 text-center">20</div>
             </div>
 
             <!-- Row Nine -->
@@ -519,9 +521,9 @@
                 </div>
               </div>
 
-              <div class="col-3 border p-4 text-center">Vanilla Syrup</div>
-              <div class="col-2 border p-4 text-center">18</div>
-              <div class="col-2 border p-4 text-center">24</div>
+              <div class="col-3 border p-4 text-center">Oatmilk</div>
+              <div class="col-2 border p-4 text-center">36</div>
+              <div class="col-2 border p-4 text-center">48</div>
               <div class="col-2 border p-4 text-center">12</div>
             </div>
 
@@ -538,10 +540,10 @@
                 </div>
               </div>
 
-              <div class="col-3 border p-4 text-center">Vanilla Syrup</div>
-              <div class="col-2 border p-4 text-center">18</div>
-              <div class="col-2 border p-4 text-center">24</div>
-              <div class="col-2 border p-4 text-center">12</div>
+              <div class="col-3 border p-4 text-center">Almond Milk</div>
+              <div class="col-2 border p-4 text-center">16</div>
+              <div class="col-2 border p-4 text-center">32</div>
+              <div class="col-2 border p-4 text-center">16</div>
             </div>
 
             <!-- Row Eleven -->
